<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/overlay_menu_background"
    android:orientation="vertical"
    android:padding="4dp">

    <TextView
        android:id="@+id/menu_add_app"
        style="@style/OverlayMenuItem"
        android:text="@string/menu_pin_shortcut" />

    <TextView
        android:id="@+id/menu_add_submenu"
        style="@style/OverlayMenuItem"
        android:text="@string/menu_app_submenu" />

    <TextView
        android:id="@+id/menu_add_widget"
        style="@style/OverlayMenuItem"
        android:text="@string/menu_pick_widget" />

    <TextView
        android:id="@+id/menu_close_panel"
        style="@style/OverlayMenuItem"
        android:text="@string/menu_close_panel" />

</LinearLayout>
